# trip-itinerary-planner

./: '  .coverage  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  docker-compose.preview.yml  docker-compose.prod.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  ghcr-publish.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  db.sh  docker-compose.preview.yml  docker-compose.prod.yml  docker-compose.yml  example.env  main.py  package.json  pyproject.toml  test_main.py  unit_tests.txt
backend/src/: db.py  db_types.py  main.py  request_types.py
backend/src/routes/: auth.py  file.py  trip_routes.py  user_routes.py
backend/test/: test_auth.py  test_main.py  test_trip_routes.py  test_user_routes.py
doc/: DesignDoc.md
frontend/: Dockerfile.prod  README.md  docker-compose.preview.yml  docker-compose.prod.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  layout.tsx  main.tsx
frontend/src/api/: fetch.ts  invitation.ts  model.ts  trip.ts  user.ts
frontend/src/components/: user-trips.tsx
frontend/src/components/ui/: card.tsx
frontend/src/lib/: utils.ts
frontend/src/lib/auth/: auth.ts  authSession.tsx
frontend/src/pages/: account.tsx  home.tsx  login.tsx  signup.tsx  trip-details.tsx  tripDetails.tsx  viewInvitation.tsx
